@startuml

    interface EstadoVehiculo {
        +{abstract} aplicarSorpresaCambioVehiculo(): EstadoVehiculo
        +{abstract} chocarContraPozo(Jugador jugador):
        +{abstract} chocarContraPiquete(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino):Esquina
        +{abstract} atravezarControlPolicial(Jugador jugador):
        +{abstract} atravezarControlPolicialMockeado(Jugador jugador):

    }

    class EstadoAuto {
        +aplicarSorpresaCambioVehiculo(): EstadoVehiculo
        +chocarContraPozo(Jugador jugador):
        +chocarContraPiquete(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino):Esquina
        +atravezarControlPolicial(Jugador jugador):
        +atravezarControlPolicialMockeado(Jugador jugador):
    }

    class EstadoMoto {
          +aplicarSorpresaCambioVehiculo(): EstadoVehiculo
          +chocarContraPozo(Jugador jugador):
          +chocarContraPiquete(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino):Esquina
          +atravezarControlPolicial(Jugador jugador):
          +atravezarControlPolicialMockeado(Jugador jugador):
    }



    class EstadoCuatroPorCuatro {
        - pozosAtravezados : Int
        +aplicarSorpresaCambioVehiculo(): EstadoVehiculo
        +chocarContraPozo(Jugador jugador):
        +chocarContraPiquete(Jugador jugador, Esquina esquinaInicio, Esquina esquinaDestino):Esquina
        +atravezarControlPolicial(Jugador jugador):
        +atravezarControlPolicialMockeado(Jugador jugador):
    }

   EstadoVehiculo <|.. EstadoAuto
   EstadoVehiculo <|.. EstadoMoto
   EstadoVehiculo <|.. EstadoCuatroPorCuatro

@enduml